_old/cluster-conf/vscode/vscode-deploy-hardcoded-password.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode-lab-app
  labels:
    app: vscode-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode-lab
  template:
    metadata:
      labels:
        app: vscode-lab
    spec:
      containers:
      - image: eif0/vscode-py:0.1

        name: vscode-lab
        ports:
        - containerPort: 8080
