_old/cluster-conf/vscode/vscode-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode-lab-svc
spec:
  selector:
    app: vscode-lab
  type: ClusterIP  
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: vscode-lab
