_old/cluster-conf/vscode/ingress-vscode-lab.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vscode-lab-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod-vscode-lab
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - vscode.k3lab.gq
    secretName: vscode-lab-secret
  rules:
  - host: vscode.k3lab.gq
    http:
      paths:
      - path: /
        backend:
          serviceName: vscode-lab-svc
          servicePort: 80
